--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsx watch server.ts",
+    "start": "node --loader tsx server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
