ability to use machine or registry from local storage, that requester does not have their credentials

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@paunel/ssh-run",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "dev": "tsx watch server.ts",
     "start": "node --loader tsx server.ts",
