--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "dev": "tsx watch server.ts",
-    "start": "node --loader tsx server.ts",
+    "start": "node --import tsx server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
