--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
+  "type": "module",
+  "engines": {
+    "node": "20",
+    "npm": "8"
+  },
   "scripts": {
     "dev": "tsx watch server.ts",
-    "start": "node --import tsx server.ts",
+    "start": "node --import tsx ./server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,7 +18,7 @@
   "dependencies": {
     "jsonwebtoken": "^9.0.0",
     "ssh2": "^1.11.0",
-    "tsx": "^3.12.6",
+    "tsx": "^3.14.0",
     "zx": "^7.2.1"
   }
 }
